--- a/symfony/templates/series/show.html.twig
+++ b/symfony/templates/series/show.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Series{% endblock %}
 
 {% block body %}
-    <h1>Series</h1>
+    <h1 class="">Series</h1>
 
     <table class="table">
         <tbody>
