--- a/symfony/public/css/styles.scss
+++ b/symfony/public/css/styles.scss
@@ -1,54 +1,71 @@
+.page-title {
+  text-align: center;
+}
 
-
-.serie-list {
+.table {
   display: flex;
-  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
 
-  .film-encadre {
+  .serie-list {
     display: flex;
-    flex-direction: column-reverse;
-    margin: 5px 35px;
+    flex-wrap: wrap;
     align-items: center;
+    justify-content: center;
+    width: 80vw;
 
-    .film-poster img {
-      width: 14vw;
-      height: 34vh;
-      min-width: 100px;
-      border-radius: 25px;
-    }
+    .film-encadre {
+      display: flex;
+      flex-direction: column-reverse;
+      margin: 5px 30px;
+      align-items: center;
 
-    .film-title {
-      font-family: "Courier New", Courier, monospace;
-      font-weight: bold;
-      width: 10vw;
-      text-align: center;
+      .film-poster img {
+        width: 14vw;
+        height: 34vh;
+        min-width: 150px;
+        max-width: 200px;
+        min-height: 250px;
+        border-radius: 25px;
+      }
+
+      .film-title {
+        font-family: "Courier New", Courier, monospace;
+        font-weight: bold;
+        width: 13vw;
+        text-align: center;
+      }
     }
   }
 }
 
 .pagination {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-bottom: 15px;
 
-    .current {
-        text-align: center;
+  .current {
+    text-align: center;
+    font-size: 20px;
 
-        &::before {
-            content: "Page ";
-        }
-    }
-
-    .page {
-        display: none;
-    }
-
-    span {
-        a {
-            text-decoration: none;
-            font-size: 30px;
-        }
+    &::before {
+      content: "Page ";
     }
   }
+
+  .page {
+    display: none;
+  }
+
+  span {
+    a {
+      text-align: center;
+      text-decoration: none;
+      font-size: 30px;
+      color: black;
+      font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+        "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    }
+  }
+}
