--- a/symfony/templates/series/index.html.twig
+++ b/symfony/templates/series/index.html.twig
@@ -7,7 +7,7 @@
     {% endblock %}
 
 {% block body %}
-    <h1>Liste des séries</h1>
+    <h1 class="page-title">Liste des séries</h1>
 
     <table class="table">
         
