--- a/symfony/templates/series/index.html.twig
+++ b/symfony/templates/series/index.html.twig
@@ -3,33 +3,42 @@
 {% block title %}Liste séries{% endblock %}
 
 {% block stylesheets %}
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
+{{ encore_entry_link_tags('app') }}
     {% endblock %}
 
 {% block body %}
-    <h1 class="page-title">Liste des séries</h1>
+    
 
-    <table class="table">
-        
-        <tbody class="serie-list">
+    
+    <div class="h-full m-0 p-0">
+
+        <h1 class=" text-center text-4xl font-bold p-7">
+            Liste des séries
+        </h1>
+
+        <div class="pagination-h">
+            {{ knp_pagination_render(series)}}
+        </div>
+
+        <div class="flex flex-wrap flex-row w-full items-baseline justify-center">
         {% for series in series %}
-            <tr class="film-encadre">
+            <div class="border-black border-8 rounded-3xl flex flex-col-reverse h-auto mx-10 mt-10 items-center">
      
-                <td class="film-title">{{ series.title }}</td>
+                <h3 class="titre font-bold text-3xl text-center p-10">{{ series.title }}</h3>
                 
-                <td class="film-poster"><a href="{{ path('app_series_show', {'id': series.id})}}">
-                    <img src="{{ series.displayPoster }}" alt="poster">
+                <div class="poster"><a href="{{ path('app_series_show', {'id': series.id})}}">
+                    <img class="border-none rounded-b-none rounded-2xl h-full w-full" src="{{ series.displayPoster }}" alt="poster">
                 </a>
-                </td>
+                </div>
             
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="11">no records found</td>
-            </tr>
+            </div>
+        
         {% endfor %}
-        {{ knp_pagination_render(series)}}
-        </tbody>
-    </table>
+        
+        </div>
+
+    </div>
 
 
 {% endblock %}
