--- a/symfony/templates/series/index.html.twig
+++ b/symfony/templates/series/index.html.twig
@@ -3,29 +3,20 @@
 {% block title %}Liste séries{% endblock %}
 
 {% block stylesheets %}
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia|Bahnschrift">
 {{ encore_entry_link_tags('app') }}
     {% endblock %}
 
 {% block body %}
-    
-
-    
-    <div class="h-full m-0 p-0">
-
-        <h1 class=" text-center text-4xl font-bold p-7">
-            Liste des séries
-        </h1>
-
         <div class="pagination-h">
             {{ knp_pagination_render(series)}}
         </div>
 
         <div class="flex flex-wrap flex-row w-full items-baseline justify-center">
         {% for series in series %}
-            <div class="border-black border-8 rounded-3xl flex flex-col-reverse h-auto mx-10 mt-10 items-center">
+            <div class="border-white border-8 rounded-3xl flex flex-col-reverse h-auto mx-10 mt-10 items-center">
      
-                <h3 class="titre font-bold text-3xl text-center p-10">{{ series.title }}</h3>
+                <h3 class="w-full titre bg-white font-bold text-3xl text-center pt-5 pb-4">{{ series.title }}</h3>
                 
                 <div class="poster"><a href="{{ path('app_series_show', {'id': series.id})}}">
                     <img class="border-none rounded-b-none rounded-2xl h-full w-full" src="{{ series.displayPoster }}" alt="poster">
@@ -38,7 +29,6 @@
         
         </div>
 
-    </div>
 
 
 {% endblock %}
