--- a/symfony/templates/series/show.html.twig
+++ b/symfony/templates/series/show.html.twig
@@ -12,7 +12,7 @@
     <div class="container flex flex-col text-white">
         <div class="flex">
             <div>
-                <div><img src="{{ series.displayPoster }}" alt="poster" width="80px"></div>
+                <div><img src="{{ series.displayPoster }}" alt="poster" width="450px"></div>
             </div>
             <div>
                 <div>
@@ -25,7 +25,7 @@
         </div>
         </div>
             <div>
-                <p class="">{{ series.plot }}</p>
+                <p class="text-white text-20">{{ series.plot }}</p>
             </div>
         
             <tr>
