--- a/symfony/templates/registration/register.html.twig
+++ b/symfony/templates/registration/register.html.twig
@@ -2,10 +2,17 @@
 
 {% block title %}Register{% endblock %}
 
-{% block body %}
-    <h1>Register</h1>
+{% block stylesheets %}
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia|Bahnschrift">
+{{ encore_entry_link_tags('app') }}
+    {% endblock %}
 
-    {{ form_start(registrationForm) }}
+{% block body %}
+   
+
+    <div class="text-white text-3xl flex flex-col border-white border-8 w-auto items-center p-10">
+        <h1 class="text-white">S'inscrire</h1>
+        {{ form_start(registrationForm) }}
         {{ form_row(registrationForm.email) }}
         {{ form_row(registrationForm.plainPassword, {
             label: 'Password'
@@ -14,5 +21,7 @@
         {{ form_row(registrationForm.agreeTerms) }}
 
     {{ form_end(registrationForm) }}
-    <button type="submit" class="btn">Register</button>
+    <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Register</button>
+    </div>
+    
 {% endblock %}
