--- a/symfony/templates/series/show.html.twig
+++ b/symfony/templates/series/show.html.twig
@@ -18,17 +18,19 @@
                 <div><img src="{{ series.displayPoster }}" alt="poster" width="450px"></div>
             </div>
             <div>
-                
+            <div class="genre">
+                {% for genre in series.getGenre %}
+                <h1>{{ genre.getName }}</h1>
+                {% endfor%}
+            </div>
+        </div>
+            <div>
                 <tr>
-                    <td>{{ series.yearStart }}</td>
+                    <h1 class="text-3xl">Année de sortie : {{ series.yearStart }}</h1>
                 </tr>
             </div>
         </div>
-        <div class="genre">
-            {% for genre in series.getGenre %}
-            <h1>{{ genre.getName }}</h1>
-            {% endfor%}
-        </div>
+        
         </div>
             <div>
                 <p class="text-white text-20">{{ series.plot }}</p>
