--- a/symfony/templates/registration/register.html.twig
+++ b/symfony/templates/registration/register.html.twig
@@ -10,18 +10,22 @@
 {% block body %}
    
 
-    <div class="text-white text-3xl flex flex-col border-white border-8 w-auto items-center p-10">
+    <div class=" flex flex-col text-black text-3xl m-auto flex flex-co w-auto items-center p-10">
         <h1 class="text-white">S'inscrire</h1>
-        {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
-        {{ form_row(registrationForm.name) }}
-        {{ form_row(registrationForm.agreeTerms) }}
-
-    {{ form_end(registrationForm) }}
-    <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Register</button>
+        
+            {{ form_start(registrationForm) }}
+            <div class="p-6 text-white flex flex-col justify-center items-center">
+                {{ form_row(registrationForm.name) }}
+            {{ form_row(registrationForm.email) }}
+            {{ form_row(registrationForm.plainPassword, {
+                label: 'Password'
+            }) }}
+           
+        </div>
+        <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Register</button>
+        {{ form_end(registrationForm) }}
+       
+    
     </div>
     
 {% endblock %}
