--- a/symfony/templates/base.html.twig
+++ b/symfony/templates/base.html.twig
@@ -22,7 +22,7 @@
               <a class="inline-block py-4  text-blue-500 hover:text-blue-800 font-semibold" href="#">Mes Séries</a>
             </li>
             <li class="nav-item px-5 mr-1">
-              <a class="inline-block py-4 text-blue-500 hover:text-blue-800 font-semibold" href="{{ path('app_login') }}">Se connecter</a>
+              <a class="inline-block py-4 text-blue-500 hover:text-blue-800 font-semibold" href="{{ path('app_login') }}">Connexion</a>
             </li>
           </ul>
         </ul>
