--- a/symfony/assets/styles/app.css
+++ b/symfony/assets/styles/app.css
@@ -11,6 +11,15 @@ body {
     min-height: 100vh;
     width: 100vw;
 }
+
+.page {
+    top: 0;
+    left: 0;
+    position: fixed;
+    min-width: 100%;
+    min-height: 100%;
+}
+
 .pagination {
     color: white;
     display: flex;
@@ -30,7 +39,7 @@ body {
 
 .poster {
     width: 350px;
-    max-height: 700px;
+    max-height: 650px;
     height: 50vh;
 }
 
@@ -43,13 +52,24 @@ body {
     font-family: Bahnschrift;
 }
 
+/* Style description */
+
+.titre-serie {
+    font-family: Bahnschrift;
+}
+
+.description {
+    font-family: Bahnschrift;
+}
+
+
 /* Style register */
 #registration_form_name {
     color: white;
     background-color: black;
     display: flex;
     border-radius: 5px;
-    border: 2px solid blue ;
+    border: 2px solid blue;
     margin: 10px 0px;
     margin-bottom: 20px;
 }
@@ -59,7 +79,7 @@ body {
     background-color: black;
     display: flex;
     border-radius: 5px;
-    border: 2px solid blue ;
+    border: 2px solid blue;
     margin: 10px 0px;
     margin-bottom: 20px;
 }
@@ -69,7 +89,6 @@ body {
     background-color: black;
     display: flex;
     border-radius: 5px;
-    border: 2px solid blue ;
+    border: 2px solid blue;
     margin: 10px 0px;
 }
-
