--- a/symfony/templates/base.html.twig
+++ b/symfony/templates/base.html.twig
@@ -10,8 +10,8 @@
         {% endblock %}
 
     </head>
-    <body>
-        <ul class=" flex items-center justify-between bg-black pt-5 pb-5 mb-5 rounded-b-2xl border-b-4 border-cyan-900 border-b">
+    <body class="page" style="background-image:url({{ asset('img/fond_site.png') }})">
+        <ul class=" flex items-center justify-between pt-1 pb-2 mb-5 rounded-b-2xl border-b-4 border-cyan-900 border-b">
             <img class="px-4 h-48 md:h-36 xl:h-24 hidden xl:inline " src="{{ asset('img/logo_pc.png') }}" alt="logo"/>
             <img class="px-4 h-48 md:h-36 xl:h-24 xl:hidden " src="{{ asset('img/logo_mobile.png') }}" alt="logo"/>
             <ul class="flex text-5xl xl:text-2xl md:text-3xl ">
