--- a/symfony/assets/styles/app.css
+++ b/symfony/assets/styles/app.css
@@ -7,17 +7,16 @@
 }
 
 body {
-    background-color: black;
     min-height: 100vh;
     width: 100vw;
 }
 
 .page {
-    top: 0;
+    background: linear-gradient(204deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 60%, rgba(47,156,179,1) 100%);    top: 0;
     left: 0;
-    position: fixed;
-    min-width: 100%;
-    min-height: 100%;
+    position: cover;
+    width: 100%;
+    height: 100%;
 }
 
 .pagination {
@@ -65,16 +64,49 @@ body {
 
 /* Style register */
 #registration_form_name {
-    color: white;
     background-color: black;
     display: flex;
     border-radius: 5px;
     border: 2px solid blue;
     margin: 10px 0px;
     margin-bottom: 20px;
+    padding: 5px;
 }
 
 #registration_form_email {
+    background-color: black;
+    display: flex;
+    border-radius: 5px;
+    border: 2px solid blue;
+    margin: 10px 0px;
+    margin-bottom: 20px;
+    padding: 5px;
+}
+
+#registration_form_plainPassword {
+    background-color: black;
+    display: flex;
+    border-radius: 5px;
+    border: 2px solid blue;
+    margin: 10px 0px;
+    padding: 5px;
+}
+
+/* style Connexion */
+label {
+    color: white; 
+}
+
+#inputPassword {
+    margin-bottom: 0px;
+}
+
+.remember {
+    width: 30px;
+    height: 30px;
+}
+
+.conn-section  {
     color: white;
     background-color: black;
     display: flex;
@@ -82,13 +114,5 @@ body {
     border: 2px solid blue;
     margin: 10px 0px;
     margin-bottom: 20px;
-}
-
-#registration_form_plainPassword {
-    color: white;
-    background-color: black;
-    display: flex;
-    border-radius: 5px;
-    border: 2px solid blue;
-    margin: 10px 0px;
+    padding: 5px;
 }
