--- a/symfony/templates/security/login.html.twig
+++ b/symfony/templates/security/login.html.twig
@@ -14,29 +14,32 @@
         </div>
     {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
-
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
-
-    {#
-        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-        See https://symfony.com/doc/current/security/remember_me.html
-
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" name="_remember_me"> Remember me
-            </label>
+    <div class="flex flex-col text-black text-3xl m-auto flex flex-co items-center p-10">
+        <h1 class="text-5xl pb-10 text-white font-semibold">Connectez-vous</h1>
+        <div class="p-6 text-white flex flex-col items-center font-semibold">
+            <div class="flex flex-col">
+                <label for="inputEmail">E-mail</label>
+                <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="conn-section" autocomplete="email" required autofocus>
+            </div>
+            <div class="flex flex-col">
+                <label for="inputPassword">Mot de passe</label>
+                <input type="password" name="password" id="inputPassword" class="conn-section" autocomplete="current-password" required>
+            </div>
         </div>
-    #}
+        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}" >
 
-    <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
-    </button>
+
+            <label class="flex items-center font-semibold">
+                <h1 class="mx-5">Remember me</h1>
+                <input type="checkbox" class="remember mx-10" name="_remember_me">
+            </label>
+
+    
+
+        <button class="mt-10 bg-blue-500 hover:bg-blue-700 text-white font-bold items-center pt-3 pb-4 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">
+            Se connecter
+        </button>
+        <a class="text-2xl text-blue-500 underline italic mt-5" href="{{path('app_register')}}">Inscrivez-vous ici!</a>
+    </div>
 </form>
 {% endblock %}
