--- a/symfony/templates/series/index.html.twig
+++ b/symfony/templates/series/index.html.twig
@@ -29,6 +29,10 @@
         
         </div>
 
+        <div class="pagination-b">
+            {{ knp_pagination_render(series)}}
+        </div>
+
 
 
 {% endblock %}
