--- a/symfony/templates/registration/register.html.twig
+++ b/symfony/templates/registration/register.html.twig
@@ -13,7 +13,7 @@
     <div class=" flex flex-col text-black text-3xl m-auto flex flex-co items-center p-10">
         <h1 class="text-5xl pb-4 text-white font-semibold">Inscription</h1>
             {{ form_start(registrationForm) }}
-            <div class="p-6 text-white flex flex-col w-screen items-center justify-center font-semibold">
+            <div class="infos p-6 text-white flex flex-col w-min items-center justify-center font-semibold">
                 {{ form_row(registrationForm.name, {
                     'label': 'Nom'
                 }) }}
