--- a/symfony/templates/admin/index.html.twig
+++ b/symfony/templates/admin/index.html.twig
@@ -1,20 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AdminController!{% endblock %}
+{% block title %}Tableau de bord administrateur{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/valentin/Documents/s3.a.01-e8/symfony/src/Controller/AdminController.php'|file_link(0) }}">src/Controller/AdminController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/valentin/Documents/s3.a.01-e8/symfony/templates/admin/index.html.twig'|file_link(0) }}">templates/admin/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <h1>Tableau de bord administrateur</h1>
+    <h2>Promouvoir un utilisateur administrateur : </h2>
+    {{ form_start(form)}}
+    {{ form_errors(form) }}
+    {{ form_row(form.email, {label: "E-mail"}) }}
+    <button type="submit" class="btn btn-primary">Promouvoir</button>
+    {{ form_end(form)}}
 {% endblock %}
