Ajout du lien entre la liste des utilisateurs et le dashboard admin

--- a/symfony/templates/admin/index.html.twig
+++ b/symfony/templates/admin/index.html.twig
@@ -10,4 +10,9 @@
     {{ form_row(formPromoteUser.email, {label: "E-mail"}) }}
     <button type="submit" class="btn btn-primary">Promouvoir</button>
     {{ form_end(formPromoteUser)}}
+    <iframe src="/user" 
+     width="100%" 
+     height="400" 
+     style="border:2px solid orange">
+    </iframe>
 {% endblock %}
