--- a/symfony/templates/user/index.html.twig
+++ b/symfony/templates/user/index.html.twig
@@ -7,7 +7,7 @@
                 <th>Id</th>
                 <th>Name</th>
                 <th>Email</th>
-                <th>Password</th>
+                {# <th>Password</th> #}
                 <th>RegisterDate</th>
                 <th>Admin</th>
                 <th>UserId</th>
@@ -20,7 +20,7 @@
                 <td>{{ user.id }}</td>
                 <td>{{ user.name }}</td>
                 <td>{{ user.email }}</td>
-                <td>{{ user.password }}</td>
+                {# <td>{{ user.password }}</td> #}
                 <td>{{ user.registerDate ? user.registerDate|date('Y-m-d H:i:s') : '' }}</td>
                 <td>{{ user.admin ? 'Yes' : 'No' }}</td>
                 <td>{{ user.userId }}</td>
