--- a/symfony/assets/styles/app.css
+++ b/symfony/assets/styles/app.css
@@ -2,13 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
+
+
 ::-webkit-scrollbar {
     display: none;
+}
+
+:root {
+    --color-custom: rgb(2, 210, 255);
 }
 
 body {
     min-height: 100vh;
     width: 100vw;
+    font-family: Bahnschrift;
+}
+
+.barre {
+    background: rgba(0,0, 37,0.35);
 }
 
 .page {
@@ -51,23 +62,16 @@ body {
 }
 
 .titre {
-    font-family: Sofia;
     width: 350px;
 }
 
-.nav-item {
-    font-family: Bahnschrift;
+.serie-encadre {
+    box-shadow: 0px 0px 20px 0px var(--color-custom);
 }
+
 
 /* Style description */
 
-.titre-serie {
-    font-family: Bahnschrift;
-}
-
-.description {
-    font-family: Bahnschrift;
-}
 
 
 /* Style register */
