--- a/symfony/templates/series/index.html.twig
+++ b/symfony/templates/series/index.html.twig
@@ -14,12 +14,12 @@
 
         <div class="flex flex-wrap flex-row w-full items-center justify-center mb-5">
         {% for series in series %}
-            <div class="border-white border-8 rounded-3xl flex flex-col-reverse h-auto mx-10 mt-10 items-center">
+            <div class="serie-encadre border-none border-4 rounded-3xl flex flex-col-reverse mb-4 h-auto mx-10 mt-10 items-center">
      
-                <h3 class="titre w-full titre bg-white font-bold text-3xl text-center pt-5 pb-4">{{ series.title }}</h3>
+                <h3 class="titre w-full titre font-bold text-white text-2xl text-center pt-5 pb-4">{{ series.title }}</h3>
                 
                 <div class="poster w-full"><a href="{{ path('app_series_show', {'id': series.id})}}">
-                    <img class="border-none rounded-b-none rounded-2xl h-full w-full" src="{{ series.displayPoster }}" alt="poster">
+                    <img class="border-none rounded-b-none rounded-3xl h-full w-full" src="{{ series.displayPoster }}" alt="poster">
                 </a>
                 </div>
             
