--- a/symfony/templates/series/show.html.twig
+++ b/symfony/templates/series/show.html.twig
@@ -17,7 +17,7 @@
                 <div class="flex flex-col ml-4">
                     <div class="flex flex-row">
                         {% for genre in series.getGenre %}
-                        <h1 class="text-xl text-blue-500 hover:text-blue-800 hover:border-blue-800 mr-2 px-4 p-2 border-blue-500 border-2 rounded-3xl">{{ genre.getName }}</h1>
+                        <h1 class="text-xl text-blue-500 hover:text-blue-custom hover:border-blue-custom mr-2 px-4 p-2 border-blue-500 border-2 rounded-3xl">{{ genre.getName }}</h1>
                         {% endfor %}
                     </div>
                     <div class="flex ml-2 mt-5 text-2xl items-center">
