Texte de description

--- a/symfony/templates/series/index.html.twig
+++ b/symfony/templates/series/index.html.twig
@@ -8,6 +8,12 @@
     {% endblock %}
 
 {% block body %}
+
+        <p>Bienvenue sur Woodeo, nous vous permettons de suivre vos séries et animés préférés !</p>
+        <p>Plongez dans le monde merveilleux des séries à travers notre site et découvrez les critiques
+            ainsi que toutes les informations à propos de vos feuilletons favoris.</p>
+        <p>Vous pouvez suivre toutes les séries que vous voulez, à tout moment, en un seul clic.</p>
+
         <div class="pagination-h">
             {{ knp_pagination_render(series)}}
         </div>
