--- a/symfony/assets/styles/app.css
+++ b/symfony/assets/styles/app.css
@@ -13,7 +13,6 @@
 }
 
 body {
-    min-height: 100vh;
     width: 100vw;
     background-image: url(fond_site.png);
     background-size: cover;
@@ -75,7 +74,10 @@ body {
 
 /* Style description */
 
-
+.description {
+    width: 80vw;
+    margin:auto;
+}
 
 /* Style register */
 #registration_form_name {
