--- a/symfony/templates/series/show.html.twig
+++ b/symfony/templates/series/show.html.twig
@@ -9,12 +9,11 @@
 
 {% block body %}
 
-    <div class="description w-4/5 m-auto flex flex-col text-white font-semibold">
-        <h1 class="titre-serie mb-5 text-6xl font-semibold">{{ series.title }}</h1>
-        <div class"flex flex-row>
-            <div class="flex">
-                <img src="{{ series.displayPoster }}" alt="poster" class="w-2/5 min-w-48 max-w-md rounded-3xl">
-                <div class="flex flex-col ml-4">
+    <div class="description m-auto flex flex-col text-white font-semibold">
+        <h1 class="titre-serie mb-5 text-6xl font-semibold md:text-left text-center pt-5">{{ series.title }}</h1>
+            <div class="flex h-full items-center md:items-start md:flex-row flex-col">
+                <img src="{{ series.displayPoster }}" alt="poster" class="poster w-2/5 min-w-48 max-w-md rounded-3xl">
+                <div class="flex flex-col ml-4 mt-10 md:mt-0">
                     <div class="flex flex-row">
                         {% for genre in series.getGenre %}
                         <h1 class="text-xl text-blue-500 hover:text-blue-custom hover:border-blue-custom mr-2 px-4 p-2 border-blue-500 border-2 rounded-3xl">{{ genre.getName }}</h1>
@@ -41,18 +40,32 @@
            
                         <div class="border-blue-500 ml-5 border-t w-1/12"></div>
                     </div>
-                    <div class="flex ml-2 mt-5 items-center">
-                        {% for i in 0..9 %}
-                            {% if series.getRate.value|number_format > i and i % 2 == 0 %}
-                                <img width="50px" src="{{ asset('img/etoile_pleine.png') }}">
-                            {% elseif series.getRate.value|number_format <= i and i % 2 == 0 %}
-                                <img width="50px" src="{{ asset('img/etoile_vide.png') }}">
-                            {% endif %}
-                        {% endfor %} 
-                        <h1 class="text-3xl mt-2 ml-5">{{series.getRate.value}}</h1>
+                    <div class="p-2 flex items-baseline">
+                        <h1 class="text-xl mr-2">Avec </h1>
+                        {% for actor in series.actor %}
+                            <h1 class="text-md mx-1" >{{ actor.name }} /</h1>
+                        {% endfor %}
                     </div>
+                    <div class=" flex flex-row flex-wrap ml-2 mt-5 mb-5 justify-between">
+                        <div class="flex items-top">
+                            {% for i in 0..9 %}
+                                {% if series.getRate.value|number_format > i and i % 2 == 0 %}
+                                    <img class="h-12 w-12" src="{{ asset('img/etoile_pleine.png') }}">
+                                {% elseif series.getRate.value|number_format <= i and i % 2 == 0 %}
+                                    <img class="w-12 h-12" src="{{ asset('img/etoile_vide.png') }}">
+                                {% endif %}
+                            {% endfor %} 
+                            <h1 class="text-3xl mt-2 ml-5">{{series.getRate.value}}</h1>
+                        </div>
+                        
+  
+                    <div>
+                        <iframe class="rounded-3xl mb-10 md:mb-0" width="560" height="315" src="{{ series.getYoutubeTrailer }}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        </div>
+                    </div>
+                    
                 </div>
-            </div>
+            
             
         </div>
     </div>
