--- a/symfony/templates/registration/register.html.twig
+++ b/symfony/templates/registration/register.html.twig
@@ -24,7 +24,7 @@
                     label: 'Mot de passe'
                 }) }}
             
-           
+                {{ form_row(registrationForm.captcha) }}
         
                 <button type="submit" class="mt-10 bg-blue-500 hover:bg-blue-700 text-white font-bold items-center pt-3 pb-4 px-4 rounded focus:outline-none focus:shadow-outline">Créer un compte</button>
                 <a class="text-2xl text-blue-500 underline italic mt-5" href="{{path('app_login')}}">Connectez-vous ici!</a>
