--- a/symfony/templates/user/index.html.twig
+++ b/symfony/templates/user/index.html.twig
@@ -1,6 +1,6 @@
 {% block body %}
     <h1>Liste des utilisateurs</h1>
-
+    <script src="https://kit.fontawesome.com/204bbbe9f0.js" crossorigin="anonymous"></script>
     <table class="table">
         <thead>
             <tr>
@@ -10,7 +10,7 @@
                 {# <th>Password</th> #}
                 <th>RegisterDate</th>
                 <th>Admin</th>
-                <th>UserId</th>
+                {# <th>UserId</th> #}
                 <th>actions</th>
             </tr>
         </thead>
@@ -23,10 +23,15 @@
                 {# <td>{{ user.password }}</td> #}
                 <td>{{ user.registerDate ? user.registerDate|date('Y-m-d H:i:s') : '' }}</td>
                 <td>{{ user.admin ? 'Yes' : 'No' }}</td>
-                <td>{{ user.userId }}</td>
+                {# <td>{{ user.userId }}</td> #}
                 <td>
                     <a href="{{ path('app_user_show', {'id': user.id}) }}">show</a>
                     <a href="{{ path('app_user_edit', {'id': user.id}) }}">edit</a>
+                    {% if user.isAdmin() %}
+                    <a href="{{ path('app_user_promote', {'id': user.id}) }}"><i class="fa-solid fa-minus"></i>demote</a>
+                    {% else %}
+                    <a href="{{ path('app_user_promote', {'id': user.id}) }}"><i class="fa-solid fa-plus"></i>promote</a>
+                    {% endif %}
                 </td>
             </tr>
         {% else %}
