--- a/symfony/templates/series/show.html.twig
+++ b/symfony/templates/series/show.html.twig
@@ -14,7 +14,12 @@
             <div class="flex h-full items-center m-auto lg:items-start lg:flex-row flex-col">
                 <div class="flex flex-col items-center">
                 <img src="{{ series.displayPoster }}" alt="poster" class="poster w-2/5 min-w-48 max-w-md rounded-3xl mb-5">
-                <a href=""><button onClick="{{app.user.addSeries(series)}}" class="text-2xl" type="submit">Suivre</button></a>  
+                <a href="{{ path('app_series_add',  {'id': series.id, 'user_id':app.user.id}) }} "><button class="text-2xl" type="submit">Suivre</button></a>  
+                {% if app.user %}
+                {% for serie in app.user.getSeries %}
+                <p>serie: {{ serie.title }}</p>
+                {% endfor %}
+                {% endif %}
                 </div>
                 <div class="flex flex-col ml-4">
                     <div class="flex flex-row">
@@ -88,19 +93,14 @@
                                         </div>
                                     </div>
                                     {% endfor %}
-
-                                    {% for ep in app.user.getEpisode %}
-                                    <p>{{ ep.title}}</p>
-
-                                    {% endfor %}
+                                    
+                                   
+                                
                                     
                                 <script src="https://unpkg.com/flowbite@1.3.3/dist/flowbite.js"></script>
                             </div>
   
-                           
-                                {% for serie in app.user.getSeries %}
-                                <p>serie: {{ serie.title }}</p>
-                                {% endfor %}
+                            
                                     
                                 
                             </div>
