--- a/symfony/templates/user/index.html.twig
+++ b/symfony/templates/user/index.html.twig
@@ -2,45 +2,52 @@
 
 {% block title %}Tableau de bord administrateur - liste utilisateurs{% endblock %}
 {% block body %}
-    <h1>Tableau de bord administrateur</h1>
-    <h1>Liste des utilisateurs</h1>
-    <div class="pagination-h">
-        {{ knp_pagination_render(users)}}
+<div class="text-white w-11/12 mx-auto">
+    <div class="flex flex-col w-full">
+        <h1 class="text-3xl text-center">Tableau de bord administrateur</h1>
+        {% if not is_granted('IS_IMPERSONATOR') %}
+        <h1 class="text-2xl py-2">Liste des utilisateurs</h1>
+        {% endif %}
+        <div class="pagination-h ">
+            {{ knp_pagination_render(users)}}
+        </div>
+        {{ form_start(UserSearchForm) }}
+            <div class="text-lg items-center flex w-full px-10 py-2 justify-between">
+                {{ form_row(UserSearchForm.email, {
+                'label': 'E-mail',
+                }) }}
+            <button class="text-black bg-blue-500 rounded-2xl p-2 hover:bg-blue-custom" type="submit">Chercher</button>
+        </div>
+        {{ form_end(UserSearchForm) }}
     </div>
-
-    {{ form_start(UserSearchForm) }}
-    {{ form_row(UserSearchForm.email, {
-        'label': 'E-mail',
-    }) }}
-    <button type="submit">Chercher</button>
-    {{ form_end(UserSearchForm) }}
-
-    <table class="table">
-        <thead>
+    
+    <table class="table w-full">
+        <thead class="bg-white text-2xl text-black h-16">
             <tr>
                 {# <th>Id</th> #}
                 <th>Nom</th>
                 <th>E-mail</th>
                 {# <th>Password</th> #}
-                <th>Date d'enregistrement</th>
-                <th>Administrateur</th>
+                {#<th>Date d'enregistrement</th>#}
+                {#<th>Administrateur</th>#}
                 {# <th>UserId</th> #}
                 <th>Actions</th>
             </tr>
         </thead>
-        <tbody>
+        <tbody class="text-center">
         {% for user in users %}
-            <tr>
+            <tr >
                 {# <td>{{ user.id }}</td> #}
-                <td>{{ user.name }}</td>
-                <td>{{ user.email }}</td>
+                <td class="px-10 h-10 text-xl">{{ user.name }}</td>
+                <td >{{ user.email }}</td>
                 {# <td>{{ user.password }}</td> #}
-                <td>{{ user.registerDate ? user.registerDate|date('d/m/Y H:i:s') : '' }}</td>
-                <td>{{ user.admin ? 'Oui' : 'Non' }}</td>
+                {#<td>{{ user.registerDate ? user.registerDate|date('d/m/Y H:i:s') : '' }}</td>#}
+                {#<td>{{ user.admin ? 'Oui' : 'Non' }}</td>#}
                 {# <td>{{ user.userId }}</td> #}
-                <td>
+                <td class="flex justify-around h-10 m-2.5 no-wrap items-center">
+                    
                     {% if not is_granted('IS_IMPERSONATOR') %}
-                    <a href="{{ path('app_series_index', {'_switch_user': user.email}) }}"><i class="fa-solid fa-person"></i></i>Incarner</a>
+                    <a class="bg-blue-800 hover:bg-blue-600 flex items-center m-5 p-2 rounded-2xl no-wrap" href="{{ path('app_series_index', {'_switch_user': user.email}) }}"><i class="fa-solid mr-2 fa-person"></i></i>Incarner</a>
                     {% endif %}
                     {# <a href="{{ path('app_user_edit', {'id': user.id}) }}">edit</a> #}
                     {% if user.isAdmin() %}
@@ -57,10 +64,13 @@
         {% endfor %}
         </tbody>
     </table>
-
     {# <a href="{{ path('app_user_new') }}">Crée un nouvel utilisateur</a> #}
-    <div class="pagination-b">
+    <div class="pagination-b absolute bottom-0 w-11/12">
         {{ knp_pagination_render(users)}}
     </div>
+</div>
+
+    
+</div>
 
 {% endblock %}
