--- a/symfony/templates/admin/index.html.twig
+++ b/symfony/templates/admin/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Tableau de bord administrateur{% endblock %}
 
 {% block body %}
-    <h1>Tableau de bord administrateur</h1>
+    <h1 class="text-3xl text-white">Tableau de bord administrateur</h1>
     <iframe src="/user" 
      width="100%" 
      height="500" 
