Note directement mise depuis la série qu'on veut noter

--- a/symfony/templates/series/show.html.twig
+++ b/symfony/templates/series/show.html.twig
@@ -51,6 +51,7 @@
                         {% endfor %} 
                         <h1 class="text-3xl mt-2 ml-5">{{series.getRate.value}}</h1>
                     </div>
+                    <a href="{{ path('app_rating_new', {'id': series.id}) }}">Mettre une note</a>
                 </div>
             </div>
             
