Formulaire pour mettre un avis en-dessous des infos des séries et avis seulement pour les membres

--- a/symfony/templates/series/show.html.twig
+++ b/symfony/templates/series/show.html.twig
@@ -51,7 +51,9 @@
                         {% endfor %} 
                         <h1 class="text-3xl mt-2 ml-5">{{series.getRate.value}}</h1>
                     </div>
-                    <a href="{{ path('app_rating_new', {'id': series.id}) }}">Mettre une note</a>
+                    {% if app.user %}
+                        <iframe height=300 src="{{ path('app_rating_new', {'id': series.id}) }}"></iframe>
+                    {% endif %}
                 </div>
             </div>
             
