--- a/symfony/templates/rating/edit.html.twig
+++ b/symfony/templates/rating/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('rating/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_rating_index') }}">back to list</a>
+    {# <a href="{{ path('app_rating_index') }}">back to list</a> #}
 
     {{ include('rating/_delete_form.html.twig') }}
 {% endblock %}
