--- a/symfony/templates/rating/new.html.twig
+++ b/symfony/templates/rating/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('rating/_form.html.twig') }}
 
-    <a href="{{ path('app_rating_index') }}">back to list</a>
+    {# <a href="{{ path('app_rating_index') }}">back to list</a> #}
 {% endblock %}
